--- a/src/main/resources/static/User/dashboard/dashboard.css
+++ b/src/main/resources/static/User/dashboard/dashboard.css
@@ -297,11 +297,13 @@ body.dark-theme {
 
 .profile-form input {
     width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius);
-    background-color: var(--background-light);
     color: var(--text-light);
+    padding: 0.5rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius);
+    border: 1px solid #ddd;
+    min-height: 38px;
+    font-size: 1rem;
 }
 
 .dark-theme .profile-form input {
@@ -875,18 +877,24 @@ body.dark-theme {
     flex: 1;
 }
 
-.main-image img {
-    width: 100%;
-    height: auto;
-    max-height: 400px;
-    object-fit: contain;
+.main-image {
+    height: 400px;
     border-radius: 4px;
+}
+
+#popupMainImage {
+    width: 100%;
+    max-height: 350px;
+    border-radius: 4px;
+    object-fit:contain;
 }
 
 .thumbnails {
     display: flex;
     gap: 10px;
     margin-top: 15px;
+    align-items: center;
+    justify-content: center;
 }
 
 .thumbnails img {
